tests/ui/zod/fail/unit_struct.stderr
error: Unsupported shape `no fields`. Expected named fields or unnamed fields.
 --> tests/ui/zod/fail/unit_struct.rs:4:10
  |
4 | #[derive(RequestType)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `RequestType` (in Nightly builds, run with -Z macro-backtrace for more info)
